[gd_scene load_steps=25 format=3 uid="uid://dgbjbwicydeq1"]

[ext_resource type="Script" uid="uid://boyba1fmetqup" path="res://scenes/chapters/capitulo_intro.gd" id="1_vfgsf"]
[ext_resource type="Texture2D" uid="uid://tfdmmmc0hjjd" path="res://Sprites/background/Clouds 1/1.png" id="2_8kre5"]
[ext_resource type="Texture2D" uid="uid://dxxcmkmtbdekl" path="res://Sprites/background/Clouds 1/2.png" id="3_8l2jk"]
[ext_resource type="Texture2D" uid="uid://dled15oea4fc2" path="res://Sprites/background/Clouds 1/3.png" id="4_vep02"]
[ext_resource type="Texture2D" uid="uid://dtgswkg5lf1us" path="res://Sprites/background/Clouds 1/4.png" id="5_bmmau"]
[ext_resource type="Texture2D" uid="uid://odufgm8aeqwn" path="res://Sprites/Azrael/azrael_caminando.png" id="6_etx6s"]
[ext_resource type="Texture2D" uid="uid://cvwtikag3lsj8" path="res://Sprites/Azrael/death_azrael.png" id="7_oyapr"]
[ext_resource type="Texture2D" uid="uid://beior1iea0wmg" path="res://Sprites/Azrael/azrael_parado.png" id="8_ofmjs"]
[ext_resource type="Texture2D" uid="uid://i11j23etnxay" path="res://Sprites/Azrael/azrael_salta.png" id="9_drmrx"]
[ext_resource type="AudioStream" uid="uid://cjlyimhtn4hw3" path="res://music/Los libros perdidos de azrael.ogg" id="10_oyapr"]

[sub_resource type="Animation" id="Animation_y7jiy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(28, 237)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"camina"]
}

[sub_resource type="Animation" id="Animation_8l2jk"]
resource_name = "azrael"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.98),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(28, 237), Vector2(116, 237)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"camina"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vep02"]
_data = {
&"RESET": SubResource("Animation_y7jiy"),
&"azrael": SubResource("Animation_8l2jk")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("6_etx6s")
region = Rect2(0, 0, 64, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("6_etx6s")
region = Rect2(64, 0, 64, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("7_oyapr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("7_oyapr")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("7_oyapr")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("8_ofmjs")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("8_ofmjs")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("9_drmrx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("9_drmrx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("9_drmrx")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_i1lii"]
animations = [{
"frames": [{
"duration": 1.9,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.9,
"texture": SubResource("AtlasTexture_ur7pv")
}],
"loop": true,
"name": &"camina",
"speed": 7.0
}, {
"frames": [{
"duration": 1.9,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.9,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.9,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.9,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.9,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"hide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.2,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": false,
"name": &"salta",
"speed": 5.0
}]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_vfgsf")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2(241.708, 142)
scale = Vector2(0.834058, 0.864195)
texture = ExtResource("2_8kre5")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(90, 65)
scale = Vector2(1.3588, 1.3588)
texture = ExtResource("3_8l2jk")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(75, 53)
scale = Vector2(1.39892, 1.39892)
texture = ExtResource("4_vep02")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(106, 75)
scale = Vector2(1.29707, 1.29707)
texture = ExtResource("5_bmmau")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vep02")
}
autoplay = "azrael"

[node name="fondo_nubes" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="fondo_nubes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("2_8kre5")

[node name="TextureRect2" type="TextureRect" parent="fondo_nubes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("3_8l2jk")

[node name="TextureRect3" type="TextureRect" parent="fondo_nubes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("4_vep02")

[node name="TextureRect4" type="TextureRect" parent="fondo_nubes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("5_bmmau")

[node name="Node" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Node"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(28, 237)
scale = Vector2(0.84375, 0.886667)
sprite_frames = SubResource("SpriteFrames_i1lii")
animation = &"camina"
autoplay = "camina"
frame = 1
frame_progress = 0.540262

[node name="Audios" type="Node2D" parent="."]

[node name="Intro_1" type="AudioStreamPlayer2D" parent="Audios"]
stream = ExtResource("10_oyapr")
volume_db = -2.4
pitch_scale = 0.94
autoplay = true
attenuation = 1.1487
parameters/looping = true

[node name="fade_rect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -31.0
offset_right = -13.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Saltar escena"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
